# beaker-old

./: CMakeLists.txt  README.md
beaker/: CMakeLists.txt  compact.cpp  compact.hpp  decl.cpp  decl.hpp  evaluate.cpp  evaluate.hpp  expr.cpp  expr.hpp  function.cpp  function.hpp  graph.cpp  graph.hpp  less.cpp  less.hpp  lexer.cpp  lexer.hpp  llvm.cpp  llvm.hpp  lookup.cpp  lookup.hpp  operator.cpp  operator.hpp  parse-decl.cpp  parse-expr.cpp  parse-stmt.cpp  parse-type.cpp  parse.cpp  parse.hpp  parser.cpp  parser.hpp  prelude.hpp  print.cpp  print.hpp  same.cpp  same.hpp  stmt.cpp  stmt.hpp  token.cpp  token.hpp  (+8 more)
beaker/codegen/: llvm-expr.cpp  llvm-stmt.cpp  llvm-type.cpp  llvm.cpp  llvm.hpp
tests/: CMakeLists.txt  exprs.cpp  fn.cpp  lex.cpp  llvm.cpp  lookup.cpp  parse.cpp  types.cpp  var.cpp
tests/input/lex/: 1.bkr
tests/input/llvm/: fn-1.bkr  global-1.bkr  global-2.bkr
tests/input/parse/: assign-1.bkr  call-1.bkr  fn-0.bkr  fn-1.bkr  stmt-0.bkr  var-1.bkr
